@@ -29,10 +29,9 @@ COPY --from=builder /app/build/libs/*.jar app.jar
 EXPOSE 8080
 
 ENTRYPOINT ["java", \
-  "-XX:+UseSerialGC", \
+  "-XX:+UseZGC", \
+  "-XX:MaxRAMPercentage=75.0", \
   "-XX:+ExitOnOutOfMemoryError", \
-  "-Xms128m", \
-  "-Xmx256m", \
   "-XX:MaxMetaspaceSize=192m", \
   "-XX:ReservedCodeCacheSize=64m", \
   "-Djava.security.egd=file:/dev/./urandom", \
